# cli-telemetry

./: AGENTS.md  README.md  TODO.md  pyproject.toml
cli_telemetry/: __main__.py  cli.py  telemetry.py
cli_telemetry/exporters/: speedscope.py  view_flame.py
cli_telemetry/instrumentation/: __init__.py  click.py  instrument_click.py  instrument_httpx.py  instrument_subprocess.py
cli_telemetry/plugins/: __init__.py
cli_telemetry/plugins/speedscope_plugin/: __init__.py  plugin.py
cli_telemetry/plugins/upload_plugin/: __init__.py  plugin.py
cli_telemetry/plugins/webapp_plugin/: __init__.py  plugin.py
examples/: click_ex.py
exporters/: speedscope.py
tests/: test_telemetry.py
